--- a/demos/index.html
+++ b/demos/index.html
@@ -7,7 +7,7 @@
   <title>TrumpImg demo</title>
 
   <link rel="stylesheet" href="demos.css">
-  <script type="module" src="./src/TrumpImg.js"></script>
+  <script type="module" src="../src/TrumpImg.js"></script>
 
   <script>
     function handleClick(src) {
