--- a/demos/demo.html
+++ b/demos/demo.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="demos.css">
   <script type="module" src="./node_modules/elix/src/WrappedStandardElement.js"></script>
-  <script type="module" src="../src/TrumpImg.js"></script>
+  <script type="module" src="./src/TrumpImg.js"></script>
 
   <script>
     function handleClick(src) {
