--- a/demos/demo.html
+++ b/demos/demo.html
@@ -32,7 +32,7 @@
       Trump is doing in any photograph used as the <b><i>src</i></b> url. The <b>&lt;trump-img&gt;</b>
       tag displays a caption and sets the <b><i>alt</i></b> and <b><i>title</i></b> attributes automatically.
       This open source project is intended to save news organizations and publishers
-      millions of dollars in copyrighting costs.
+      millions of dollars in analysis and copyrighting costs.
     </p>
 
     <p>
