README and demo text

--- a/demos/demo.html
+++ b/demos/demo.html
@@ -22,15 +22,15 @@
 <body role="main">
   <div class="demo padded">
 
-    <h1>&lt;trump-img&gt;</h1>
+    <h1><code>&lt;trump-img&gt;</code></h1>
     <p>
-      The <b>&lt;trump-img&gt;</b> tag replaces the standard <b>&lt;img&gt;</b> tag for use in
+      The <b><code>&lt;trump-img&gt;</code></b> tag replaces the standard <b><code>&lt;img&gt;</code></b> tag for use in
       displaying photographs of Donald Trump. This helpful web component uses
       sophisticated AI modeling, trained on decades of news articles, photographs,
       television broadcasts, commentary, public statements, court documents, and 
       the entirety of his Twitter emissions in order to automatically detect what
-      Trump is doing in any photograph used as the <b><i>src</i></b> url. The <b>&lt;trump-img&gt;</b>
-      tag displays a caption and sets the <b><i>alt</i></b> and <b><i>title</i></b> attributes automatically.
+      Trump is doing in any photograph used as the <b><code>src</code></b> url. The <b>&lt;trump-img&gt;</b>
+      tag displays a caption and sets the <b><code>alt</code></b> and <b><code>title</code></b> attributes automatically.
       This open source project is intended to save news organizations and publishers
       millions of dollars in analysis and copy writing costs.
     </p>
@@ -68,6 +68,10 @@
       Images courtesy of <a href="https://www.irishpost.com/news/president-donald-trump-ireland-uk-170525">The Irish Post</a>,
       <a href="https://www.marketwatch.com/story/why-some-stock-market-investors-fear-the-trump-put-has-expired-2019-08-26">MarketWatch</a>,
       and <a href="https://www.axios.com/everything-trump-says-he-knows-more-about-than-anybody-b278b592-cff0-47dc-a75f-5767f42bcf1e.html">Axios</a>.
+    </p>
+
+    <p>
+      See it on <a href="https://github.com/robbear/trump-img">GitHub</a>.
     </p>
 
   </div>
