--- a/demos/demo.html
+++ b/demos/demo.html
@@ -51,16 +51,16 @@
       photo url.
     </p>
 
-    <trump-img id="image" src="https://media.irishpost.co.uk/uploads/2019/06/04114615/Donald-Trump-Irish-Post-1.jpg"></trump-img>
+    <trump-img id="image" src="./images/trump3.jpg"></trump-img>
 
     <p style="margin: 20px 0">
       <style>
         li { cursor: pointer; font-style: italic; line-height: 2em;}
       </style>
       <ul>
-        <li onclick="handleClick('https://ei.marketwatch.com/Multimedia/2019/08/26/Photos/ZH/MW-HQ143_trump__20190826125818_ZH.jpg?uuid=b3c8e504-c822-11e9-9564-9c8e992d421e')"> Sample Trump image (tap here)</li>
-        <li onclick="handleClick('https://images.axios.com/35zkqqrHWC9dJZBXti2g-xHSNy4=/0x71:4291x2485/1366x768/2019/01/05/1546707506731.jpg')">A really difficult to determine what he's doing Trump image (tap here)</li>
-        <li onclick="handleClick('https://media.irishpost.co.uk/uploads/2019/06/04114615/Donald-Trump-Irish-Post-1.jpg')">Another sample Trump image (tap here)</li>
+        <li onclick="handleClick('./images/trump1.jpg')"> Sample Trump image (tap here)</li>
+        <li onclick="handleClick('./images/trump2.jpg')">A really difficult to determine what he's doing Trump image (tap here)</li>
+        <li onclick="handleClick('./images/trump3.jpg')">Another sample Trump image (tap here)</li>
       </ul>
     </p>
 
